--- a/src/app/lobby/lobby.component.scss
+++ b/src/app/lobby/lobby.component.scss
@@ -58,16 +58,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
-}
+  gap: 1rem;
+	position: absolute;
+	left: 1rem;
+	top: 1rem;
 
-.lobby-header h1 {
-  font-family: var(--font-display);
+	font-family: var(--font-display);
   font-size: 1.8rem;
   color: var(--clr-secondary);
   text-shadow: 1px 1px #000;
   animation: bounce 2.5s ease-in-out infinite;
 }
+
 
 .username {
   color: var(--clr-primary);
@@ -123,7 +125,6 @@
   color: var(--clr-secondary);
   text-align: center;
   margin-bottom: 1rem;
-  animation: bounce 2.5s ease-in-out infinite;
 }
 
 .room-list ul {
